# docs/swagger.json
@@ -1098,6 +1098,61 @@
                 }
             }
         },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Fetches the authenticated user profile details.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.ResponseWrapper"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/domain.User"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseWrapper"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseWrapper"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseWrapper"
+                        }
+                    }
+                }
+            }
+        },
         "/users/orders": {
             "post": {
                 "security": [
@@ -1322,73 +1377,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/common.ResponseWrapper"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/common.ResponseWrapper"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Fetches the user profile details by their unique ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get user profile",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID (UUID)",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/common.ResponseWrapper"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/domain.User"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/common.ResponseWrapper"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/common.ResponseWrapper"
                         }
@@ -1764,6 +1752,17 @@
                 }
             }
         },
+        "domain.AddressTag": {
+            "type": "string",
+            "enum": [
+                "home",
+                "work"
+            ],
+            "x-enum-varnames": [
+                "AddressTagHome",
+                "AddressTagWork"
+            ]
+        },
         "domain.OrderStatus": {
             "type": "string",
             "enum": [
@@ -1851,10 +1850,25 @@
                 "address_id": {
                     "type": "string"
                 },
-                "custom_shipping_address": {
+                "payment_method": {
                     "type": "string"
                 },
-                "payment_method": {
+                "shipping_city": {
+                    "type": "string"
+                },
+                "shipping_phone_number": {
+                    "type": "string"
+                },
+                "shipping_postal_code": {
+                    "type": "string"
+                },
+                "shipping_province": {
+                    "type": "string"
+                },
+                "shipping_recipient_name": {
+                    "type": "string"
+                },
+                "shipping_street_address": {
                     "type": "string"
                 }
             }
@@ -1898,6 +1912,24 @@
                     "type": "string"
                 },
                 "payment_id": {
+                    "type": "string"
+                },
+                "shipping_city": {
+                    "type": "string"
+                },
+                "shipping_phone_number": {
+                    "type": "string"
+                },
+                "shipping_postal_code": {
+                    "type": "string"
+                },
+                "shipping_province": {
+                    "type": "string"
+                },
+                "shipping_recipient_name": {
+                    "type": "string"
+                },
+                "shipping_street_address": {
                     "type": "string"
                 },
                 "status": {
@@ -2025,7 +2057,7 @@
                     "type": "string"
                 },
                 "tag": {
-                    "type": "string"
+                    "$ref": "#/definitions/domain.AddressTag"
                 }
             }
         },
@@ -2060,7 +2092,7 @@
                     "type": "string"
                 },
                 "tag": {
-                    "type": "string"
+                    "$ref": "#/definitions/domain.AddressTag"
                 }
             }
         },
